Fixed navbar on mobile

--- a/src/static/css/navbar.css
+++ b/src/static/css/navbar.css
@@ -1,30 +1,1 @@
-/* Navbar General */
 
-.navbar{
-  position: fixed;
-  width:100%;
-  padding: 0px !important;
-  height: 52px;
-  background-color: #1a1a1a !important;
-  text-transform: uppercase;
-  border-bottom: 1px solid gray;
-}
-
-/* Drop Verion */
-
-.top-logo{
-  height: 50px;
-  width: 50px;
-  margin: 0px !important;
-  padding-top:0px;
-}
-
-.navbar-brand{
-  height: 100%;
-  margin: 0px !important;
-  padding: 0px !important;
-}
-
-div.container-fluid.top-nav{
-  padding: 0px !important;
-}
